# MathWorks.Cpp

./: .gitignore  CMakeLists.txt  README.md  mMatfile.sln
MathWorks.Cpp/: CMakeLists.txt
MathWorks.Cpp/include/: C_Coder.h  CellArray.h  Matfile.h  MathWorks.h  MatlabStruct.h  TypeConverters.h
MathWorks.Cpp/include/MathWorks/: AdaptiveThreshold.h  Checkerboard.h  ConnectedComponents.h  ConnectedComponents16Bit.h  ConnectedComponents8Bit.h  Demosaic16Bit.h  Demosaic8Bit.h  MathWorksCpp_data.h  MathWorksCpp_emxAPI.h  MathWorksCpp_emxutil.h  MathWorksCpp_initialize.h  MathWorksCpp_rtwutil.h  MathWorksCpp_terminate.h  MathWorksCpp_types.h  NormalRand.h  RandomPermutation.h  SplineApp.h  SplineArray.h  SplineSingle.h  UniformRand.h  algbwmorph.h  all.h  any1.h  bsearch.h  bsxfun.h  bwconncomp.h  cat.h  demosaic.h  detectCheckerboard.h  detectCheckerboardPoints16Bit.h  detectCheckerboardPoints8Bit.h  diag.h  diff.h  eml_rand.h  eml_rand_mcg16807_stateful.h  eml_rand_mt19937ar_stateful.h  eml_rand_shr3cong_stateful.h  find_peaks.h  imclose.h  imfilter.h  (+37 more)
MathWorks.Cpp/lib/x64/: MathWorksCpp.lib  libmx.lib
MathWorks.Cpp/source/: C_Coder.cpp  CellArray.cpp  Matfile.cpp  MathWorks.cpp  MatlabStruct.cpp  TypeConverters.cpp
MathWorks.NET/: CMakeLists.txt
MathWorks.NET/include/: C_Coder.NET.h  CellArray.NET.h  Containers.h  Matfile.NET.h  MatlabStruct.NET.h
MathWorks.NET/source/: C_Coder.NET.cpp  CellArray.NET.cpp  Containers.cpp  Matfile.NET.cpp  MatlabStruct.NET.cpp
Matlab/CppInterface/: Adaptivethreshold.m  ConnectedComponents16Bit.m  ConnectedComponents8Bit.m  Demosaic16Bit.m  Demosaic8Bit.m  NormalRand.m  RandomPermutation.m  SplineApp.m  SplineArray.m  SplineSingle.m  UniformRand.m  detectCheckerboardPoints16Bit.m  detectCheckerboardPoints8Bit.m  imresize16bit.m  imresize8bit.m  splinapp.m
TestCpp/: CMakeLists.txt
TestCpp/source/: Test.cpp
Tests.NET/: CMakeLists.txt  Program.cs
mMatfile/: AssemblyInfo.cpp  mMatfile.vcxproj  mMatfile.vcxproj.filters
mMatfile/src/: Matfile.cpp  MatlabStruct.cpp
